<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:src="@drawable/manusia"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        tools:src="@android:color/darker_gray" />

    <TextView
        android:id="@+id/Name"
        style="@style/TextContent.Black"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nama_dev"
        android:textColor="@android:color/black"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/Detail1"
        style="@style/TextContent"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/Deskripsi1"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Detail2"
        style="@style/TextContent"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/Deskripsi2"
        android:textColor="@android:color/black"
        android:textSize="16sp" />



</LinearLayout>